some css issues fixed

--- a/src/template.html
+++ b/src/template.html
@@ -10,14 +10,16 @@
 
 <body>
     <div class="sidebar">
-        <div class="logo">
-            <img src="logo.svg" />
-            <div class="name">$%name_%$</div>
-            <div class="version">$%version_%$</div>
+        <div class="sidebar-content">
+            <div class="logo">
+                <img src="logo.svg" />
+                <div class="name">$%name_%$</div>
+                <div class="version">$%version_%$</div>
+            </div>
+            <ul class="list">
+                $%menu_list_%$
+            </ul>
         </div>
-        <ul class="list">
-            $%menu_list_%$
-        </ul>
     </div>
 
     <div id="content">
